[project]
name = "game-app"
version = "0.1.0"
description = "A simple web-based PS1 memory card manager"

requires-python = ">=3.10,<4.0"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "icecream (>=2.1.4,<3.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "pandas-stubs (>=2.3.3.251201,<3.0.0)",
]
